[package]
name = "Buildy"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
sha2 = "0.10.9"
hex = "0.4.3"
uuid = { version = "1.21.0", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Additional crates for new functionality
clap = { version = "4.2", features = ["derive"] }
notify = "6.1"
rayon = "1.9"
num_cpus = "1.17"
chrono = { version = "0.4", features = ["serde"] }
rustyline = "17"

[dev-dependencies]
tempfile = "3.5"
